# workovercv

./: .gitignore  README.md  pyproject.toml
adapters/: status.yml
adapters/claude-code/: README.md  install.sh
adapters/codex/: README.md  SMOKE.md  VERIFY.md  install.ps1  install.sh
claimlint/: input_manifest.yml
claimlint/workovercv-20260618-1447Z/: claims.jsonl  claims_report.md  evidence_packet.md  remediation_tasks.md  run_manifest.json
docs/: implementation_map.md  manifest_contract.md
examples/mitchellquinn-20260618-1431Z/: artifact_inventory.json  evidence_map.jsonl  explicit_claims.jsonl  gap_register.jsonl  materialization.json  mitigations.jsonl  repo_inventory.json  report.json  report.md  review_scope.yml  run_manifest.json  screening_brief.md  signal_ledger.jsonl  summary-report.md  work_chronology.json
examples/mitchellquinn-20260618-1524Z/: artifact_inventory.json  evidence_map.jsonl  explicit_claims.jsonl  materialization.json  repo_inventory.json  report.json  report.md  review_scope.yml  role_family_fit.json  run_manifest.json  screening_brief.md  signal_ledger.jsonl  summary-report.md  work_chronology.json
schemas/: explicit_claim.schema.json  mitigation.schema.json  red_team_review.schema.json  repo_inventory.schema.json  review_scope.schema.json  role_family_fit.schema.json  signal.schema.json  work_chronology.schema.json
skills/workovercv/: SKILL.md
tests/: test_analyze.py  test_collect.py  test_github.py  test_manifest.py  test_render_validate.py  test_rubric.py  test_run_manifest.py  test_scan.py  test_skill_packaging.py
(+85 files in other folders)
